# mediamop

./: .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SUPPORT.md  compose.yaml  docker-compose.mediamop.ghcr.yml  docker-compose.mediamop.yml  docker-compose.postgres.yml
apps/backend/: .env.example  README.md  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/tests/: __init__.py  conftest.py  integration_app_runtime_quiesce.py  integration_helpers.py  test_activity_stream.py  test_alembic_revision_startup.py  test_arr_failed_import_classification.py  test_arr_failed_import_cleanup_decision.py  test_arr_failed_import_cleanup_policy.py  test_arr_failed_import_env_settings.py  test_auth_api.py  test_bootstrap_status_db_unit.py  test_bootstrap_status_router.py  test_config_env_parsing.py  test_configuration_bundle_api.py  test_csrf_unit.py  test_dashboard_status.py  test_failed_import_queue_attention_count.py  test_fetcher_arr_operator_settings_api.py  test_fetcher_arr_search_lane.py  test_fetcher_arr_search_manual_enqueue_api.py  test_fetcher_automation_summary_service.py  test_fetcher_cleanup_policy_effective_plan.py  test_fetcher_failed_import_activity.py  test_fetcher_failed_import_cleanup_drive_schedule.py  test_fetcher_failed_import_cleanup_orchestration.py  test_fetcher_failed_import_cleanup_policy_api.py  test_fetcher_failed_import_queue_attention_api.py  test_fetcher_failed_import_runtime_visibility_unit.py  test_fetcher_failed_imports_manual_enqueue_api.py  test_fetcher_failed_imports_recover_finalize_api.py  (+90 more)
docs/: TASKS.md  (+8 more)
(+530 files in other folders)
