[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mediamop-backend"
version = "1.0.23"
description = "MediaMop backend spine (FastAPI, SQLite, Alembic)"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
dependencies = [
  "fastapi>=0.115",
  "python-dotenv>=1.0",
  "uvicorn[standard]>=0.32",
  "sqlalchemy>=2.0.40",
  "alembic>=1.14",
  "argon2-cffi>=23.1.0",
  "itsdangerous>=2.1",
  "cryptography>=44.0.0",
  "httpx>=0.27",
  "tzdata>=2025.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "playwright>=1.49.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mediamop*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
